src/objects/Property_Insurance__c.object
<CustomObject>
    <fields>
        <fullName>Annual_Amount__c</fullName>
        <label>Annual Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Budget_received__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Budget received</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Building_Replacement_Value__c</fullName>
        <label>Building Replacement Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Building__c</fullName>
        <label>Building</label>
        <picklist>
            <picklistValues>
                <fullName>Landlord</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tenant</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NA</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Contents_Value__c</fullName>
        <label>Contents Value</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Contents__c</fullName>
        <label>Contents</label>
        <picklist>
            <picklistValues>
                <fullName>Landlord</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tenant</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NA</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Email_for_alert__c</fullName>
        <description>This field is used by two workflow rules to alert service managers and/or operation managers</description>
        <label>Email for alert</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Email_formula__c</fullName>
        <formula>IF(CONTAINS(Property_Contract__r.Location__r.Where__r.Name,&quot;Local Service Office&quot;), Property_Contract__r.Location__r.Where__r.Locality_Manager__r.Email
,IF(CONTAINS(Property_Contract__r.Location__r.Where__r.Name,&quot;Area&quot;), Property_Contract__r.Location__r.Where__r.Regional_Operations_Manager__r.Email ,IF(CONTAINS(Property_Contract__r.Location__r.Where__r.Name,&quot;Region&quot;), Property_Contract__r.Location__r.Where__r.Operations_Director__r.Email, 
&apos;&apos;)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Email formula</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>End_Date_Insurance__c</fullName>
        <inlineHelpText>Insurance Charge</inlineHelpText>
        <label>Insurance End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <label>Service Charge End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Insurance_Amount__c</fullName>
        <label>Insurance Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Insurance_Percentage__c</fullName>
        <label>Insurance Percentage</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Insurance_Rent_Payable__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Insurance Rent Payable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Loss_of_Rent__c</fullName>
        <label>Loss of Rent</label>
        <picklist>
            <picklistValues>
                <fullName>Landlord</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tenant</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NA</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Method_of_Payment_in__c</fullName>
        <label>Method of Payment Insurance</label>
        <picklist>
            <controllingField>Insurance_Rent_Payable__c</controllingField>
            <picklistValues>
                <fullName>Paid as Insurance Rent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Paid as a part of Service Charge</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Method_of_Payment_sc__c</fullName>
        <label>Method of Payment Service Charge</label>
        <picklist>
            <controllingField>Service_Charge_Payable__c</controllingField>
            <picklistValues>
                <fullName>Paid on demand</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Paid together with the rent</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Number_of_Years__c</fullName>
        <label>Number of Years</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Percentage__c</fullName>
        <label>Percentage</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Plate_Glass_Value__c</fullName>
        <label>Plate Glass Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Plate_Glass__c</fullName>
        <label>Plate Glass</label>
        <picklist>
            <picklistValues>
                <fullName>Landlord</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tenant</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NA</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Policy_Amount__c</fullName>
        <defaultValue>10000000</defaultValue>
        <label>Policy Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Property_Contract__c</fullName>
        <label>Property Contract</label>
        <referenceTo>Property_Contract__c</referenceTo>
        <relationshipName>Property_Insurance_s</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Reconciliation_Actioned__c</fullName>
        <label>Reconciliation Actioned</label>
        <picklist>
            <picklistValues>
                <fullName>To be Paid</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>To be Received</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Reconciliation_Amount__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Reconciliation Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Reconciliation_Received__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Reconciliation Received</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Service_Charge_Amount__c</fullName>
        <label>Service Charge Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Service_Charge_Comments__c</fullName>
        <label>Service Charge Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Service_Charge_Payable__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Service Charge Payable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Service_Charge_Percentage__c</fullName>
        <label>Service Charge Percentage</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Start_Date_Insurance__c</fullName>
        <inlineHelpText>Insurance Charge</inlineHelpText>
        <label>Insurance Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Service Charge Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Tenant_Public_Liability__c</fullName>
        <label>Tenant Public Liability</label>
        <picklist>
            <picklistValues>
                <fullName>Tenant</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Insurance &amp; Service Charge</label>
    <nameField>
        <displayFormat>ISC-{00}</displayFormat>
        <label>Insurance &amp; Service Charge Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Insurance &amp; Service Charge(s)</pluralLabel>
    <recordTypes>
        <fullName>Insurance_Charge</fullName>
        <active>true</active>
        <label>Insurance Charge</label>
    </recordTypes>
    <recordTypes>
        <fullName>Service_Charge</fullName>
        <active>true</active>
        <label>Service Charge</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Building_Replacement_Value_is_required</fullName>
        <active>true</active>
        <errorConditionFormula>IF(AND(ISPICKVAL(Building__c,&apos;Tenant&apos;),  ISBLANK(Building_Replacement_Value__c),  (RecordType.DeveloperName  =&apos;Insurance_Charge&apos;), $User.IgnoreValidationRules__c=False),True,False)</errorConditionFormula>
        <errorDisplayField>Building_Replacement_Value__c</errorDisplayField>
        <errorMessage>“Building Replacement Value” field must be populated</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Insurance_Contents_Value_Required</fullName>
        <active>true</active>
        <errorConditionFormula>NOT(ISPICKVAL(Contents__c,&quot;NA&quot;) || ISBLANK(TEXT(Contents__c)) ) 
&amp;&amp;
ISBLANK(Contents_Value__c)
&amp;&amp; 
$User.IgnoreValidationRules__c =False
&amp;&amp;
RecordType.DeveloperName=&apos;Insurance_Charge&apos;</errorConditionFormula>
        <errorDisplayField>Contents_Value__c</errorDisplayField>
        <errorMessage>&quot;Contents value&quot; field must be populated</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Insurance_Rent_Checked</fullName>
        <active>true</active>
        <description>Either Amount or Percentage has to be entered</description>
        <errorConditionFormula>$User.IgnoreValidationRules__c=False 
&amp;&amp; 
RecordType.DeveloperName=&apos;Insurance_Charge&apos; 
&amp;&amp; 
Insurance_Rent_Payable__c = TRUE 
&amp;&amp;  

     Text(Method_of_Payment_in__c)&lt;&gt;&quot;Paid as a part of Service Charge&quot;

&amp;&amp;
(
    ISBLANK( Insurance_Amount__c)  
          &amp;&amp;  
    ISBLANK(Insurance_Percentage__c )
)</errorConditionFormula>
        <errorDisplayField>Insurance_Amount__c</errorDisplayField>
        <errorMessage>Insurance Amount or Percentage to be filled if Insurance Rent is Payable</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Insurance_Rent_Paid_Part_Of_Service_Char</fullName>
        <active>true</active>
        <description>Either Amount or Percentage has to be entered</description>
        <errorConditionFormula>$User.IgnoreValidationRules__c=False 
&amp;&amp; 
RecordType.DeveloperName=&apos;Insurance_Charge&apos; 
&amp;&amp; 
Insurance_Rent_Payable__c = TRUE 
&amp;&amp;  

     Text(Method_of_Payment_in__c)=&quot;Paid as a part of Service Charge&quot;

&amp;&amp;
(

   (
    NOT(ISBLANK( Insurance_Amount__c))  
          &amp;&amp;  
    NOT(ISBLANK(Insurance_Percentage__c ))
    )
      || 
   (
    NOT(ISBLANK( Insurance_Amount__c))  
          ||
    NOT(ISBLANK(Insurance_Percentage__c ))
   )
)</errorConditionFormula>
        <errorDisplayField>Insurance_Amount__c</errorDisplayField>
        <errorMessage>Insurance Amount and/or Percentage must be blank if Insurance Rent is paid as a part of the Service Charge</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Insurance_Rent_UnChecked</fullName>
        <active>true</active>
        <description>Either Amount or Percentage has to be entered</description>
        <errorConditionFormula>$User.IgnoreValidationRules__c=False &amp;&amp; RecordType.DeveloperName=&apos;Insurance_Charge&apos; &amp;&amp; Insurance_Rent_Payable__c = FALSE 
&amp;&amp;   
(
  (
   NOT(ISBLANK( Insurance_Amount__c))  
       || 
   NOT(ISBLANK(Insurance_Percentage__c ))

    )

        || 

   (
    NOT(ISBLANK( Insurance_Amount__c))  
               &amp;&amp;  
    NOT(ISBLANK(Insurance_Percentage__c ))
   )
)</errorConditionFormula>
        <errorDisplayField>Insurance_Amount__c</errorDisplayField>
        <errorMessage>Insurance Amount or Percentage to be filled Only if Insurance Rent is Payable</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Number_of_Years_is_required</fullName>
        <active>true</active>
        <errorConditionFormula>IF(AND(NOT(ISPICKVAL( Loss_of_Rent__c ,&apos;NA&apos;)),   ISBLANK(Number_of_Years__c),RecordType.DeveloperName  =&apos;Insurance_Charge&apos;,$User.IgnoreValidationRules__c=False),True,False)</errorConditionFormula>
        <errorDisplayField>Number_of_Years__c</errorDisplayField>
        <errorMessage>&quot;Number of Years” field must be populated</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Service_Charge_Checked</fullName>
        <active>true</active>
        <description>Either Amount or Percentage has to be entered</description>
        <errorConditionFormula>$User.IgnoreValidationRules__c=False&amp;&amp; Service_Charge_Payable__c  = TRUE &amp;&amp;   
(ISBLANK( Service_Charge_Amount__c )  &amp;&amp;  
ISBLANK( Service_Charge_Percentage__c ))&amp;&amp; RecordType.DeveloperName=&apos;Service_Charge&apos;</errorConditionFormula>
        <errorDisplayField>Service_Charge_Amount__c</errorDisplayField>
        <errorMessage>Service Charge Amount or Percentage to be filled if Insurance Rent is Payable</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Service_Charge_UnChecked</fullName>
        <active>true</active>
        <description>Either Amount or Percentage has to be entered</description>
        <errorConditionFormula>$User.IgnoreValidationRules__c=False &amp;&amp;
RecordType.DeveloperName=&apos;Service_Charge&apos; &amp;&amp; Service_Charge_Payable__c  = FALSE &amp;&amp;   (NOT(ISBLANK( Service_Charge_Amount__c ))  ||  NOT(ISBLANK( Service_Charge_Percentage__c )))</errorConditionFormula>
        <errorDisplayField>Service_Charge_Amount__c</errorDisplayField>
        <errorMessage>Service Charge Amount or Percentage to be filled Only if Insurance Rent is Payable</errorMessage>
    </validationRules>
</CustomObject>